--- a/_posts/blog/2018-03-15-thecvm.md
+++ b/_posts/blog/2018-03-15-thecvm.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 【CVM】【2018.3.15】关于 CVM 的进度与设计构想
-categories: [CMS, CVM]
+categories: [cms, cvm]
 description: 
 keywords: Chill
 ---
