--- a/_posts/blog/2018-03-16-cvmoptim1.md
+++ b/_posts/blog/2018-03-16-cvmoptim1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 【CVM】【2018.3.16】CVM 的内存占用优化（一）
-categories: [cvm]
+categories: [cvm, 优化]
 description: 
 keywords: Chill
 ---
