--- a/_posts/blog/2018-03-16-cvmoptim1.md
+++ b/_posts/blog/2018-03-16-cvmoptim1.md
@@ -8,6 +8,8 @@ keywords: Chill
 
 ## 优化前后内存占用的对比
 
+[commit](https://github.com/CVM-Projects/CVM/commit/ce4f0fc90e9921a98936ad1bb74f94d14226db3e)
+
 优化前|优化后
 |--|--|
 80.9 MB| 23.2 MB
